--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
     "sequelize": "^6.32.1"
   }
