--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 DB_NAME='gourp-chat'
-DB_USER='root'
-DB_PASSWORD='12345'
-DB_HOST='localhost'
+DB_USER='ChatShapener123'
+DB_PASSWORD='Pa$$w0rd'
+DB_HOST='database-1.crgl5qnf6fv6.us-east-1.rds.amazonaws.com '
+
+SECRET_KEY='secretKey'
 
 PORT='4000'
 
